[package]
name = "coreclr-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.13.3"
bitflags = "2.4.2"
num-traits = "0.2"
num-derive = "0.4"
log = "0.4.21"

[target.'cfg(windows)'.dependencies]
etw-reader = { path = "../etw-reader" }

# linux-perf-data = "0.10.1"
[[example]]
name = "dump-nettrace"